# genpwd

./: .gitignore  Cargo.toml
src/: main.rs
