[package]
name = "genpwd"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
clap = "2.33.3"

[dependencies.qr_code]
version = "1.1.0"
features = ["bmp"]

[dependencies.sdl2]
version = "0.35.1"
features = ["image"]
