[package]
name = "genpwd"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
clap = "4.0.18"

[dependencies.qr_code]
version = "1.1.0"
optional = true
features = ["bmp"]

[dependencies.sdl2]
version = "0.35.1"
optional = true
features = ["image"]

# TODO: solve how to conditionally download/compile dep crates
[features]
default = ["qr_code", "sdl2"] 
